# ReachVariantEditorLinux

./: .gitignore  CMakeLists.txt  HOW TO CONTRIBUTE.md  README.md
.github/workflows/: linux-build.yml
native/src/ReachVariantTool/: ReachVariantTool.vcxproj  ReachVariantTool.vcxproj.filters  editor_state.h  headless.cpp  main.cpp
native/src/ReachVariantTool/Resources/: help_docs.qrc
native/src/ReachVariantTool/editor_state/: ReachStringCentralModel.cpp
native/src/ReachVariantTool/formats/: bitset.h  block.cpp  localized_string_table.cpp
native/src/ReachVariantTool/game_variants/: base.h  editor_file_block.cpp  resource.h
native/src/ReachVariantTool/game_variants/components/: megalo_options.h
native/src/ReachVariantTool/game_variants/components/megalo/: conditions.cpp  limits_bitnumbers.h  trigger.cpp  variable_declarations.cpp  variable_declarations.h  variables_and_scopes.cpp
native/src/ReachVariantTool/game_variants/data/: object_types.cpp
native/src/ReachVariantTool/helpers/: bytewriter.cpp  debugbreak.h  endianness.cpp  fourcc.h  memory.cpp  miscellaneous.cpp  miscellaneous.h  pointer_list.h  stream.h  strings.h
native/src/ReachVariantTool/helpers/ini/: file.cpp  setting.cpp
native/src/ReachVariantTool/helpers/iterators/: pointer_based.h
native/src/ReachVariantTool/helpers/qt/: color.cpp  color.h  string.cpp  string.h  widget.cpp
native/src/ReachVariantTool/services/: ini.cpp  ini.h  localization_library.cpp  syntax_highlight_option.cpp
native/src/ReachVariantTool/ui/: main_window.cpp  main_window.ui  options_window.cpp  options_window.h  script_editor.cpp  script_editor.h  script_editor.ui
native/src/ReachVariantTool/ui/generic/: MegaloSyntaxHighlighter.cpp  MegaloSyntaxHighlighter.h
native/src/ReachVariantTool/ui/main_window/: widget_macros_setup_start.h  widget_macros_update_start.h
native/src/ReachVariantTool/ui/script_editor/: code_editor_with_line_numbers.cpp  find_replace_bar.cpp  page_forge_labels.cpp  page_player_rating_params.cpp  page_script_code.cpp  page_script_code.h  page_script_code.ui  reference_popup.cpp  reference_popup.h  reference_popup.ui
native/src/ReachVariantTool/ui/widgets/: LoadoutForm.cpp  const_team_index_combobox.h
packaging/linux/: create-release-archive.sh  reachvarianttool.desktop
src/: README.txt  cli.cpp  editor_state.cpp  headless.cpp  main.cpp
src/editor_state/: ReachStringCentralModel.cpp
src/formats/: bitset.h  block.cpp  localized_string_table.cpp  localized_string_table.h
src/game_variants/: base.cpp  editor_file_block.h  resource.h
src/game_variants/components/: megalo_options.h
src/game_variants/components/megalo/: actions.cpp  forge_label.h  limits_bitnumbers.h  trigger.cpp  trigger.h  variable_declarations.h  variables_and_scopes.cpp
src/game_variants/components/megalo/compiler/: compiler.h
src/game_variants/components/megalo/opcode_arg_types/: all_indices.h  fireteam_list.h  forge_label.h  format_string.h  icons.cpp  icons.h  incident.h  megalo_scope.h  object_type.h  player_traits.cpp  player_traits.h  shape.cpp  sound.h  timer_rate.cpp  variant_string_id.h  widget_related.h
src/game_variants/components/megalo/opcode_arg_types/variables/: team.cpp  timer.cpp
src/game_variants/types/: multiplayer.cpp
src/helpers/: bitnumber.h  bitreader.h  bitset.h  bitwriter.cpp  bitwriter.h  bytereader.h  bytewriter.h  endianness.h  indexed_list.h  int128.h  string_scanner.cpp  strings.cpp  type_traits.h
src/helpers/ini/: file.h
src/helpers/qt/: color.cpp
src/services/: ini.cpp  ini.h  syntax_highlight_option.cpp
src/ui/: main_window.cpp  main_window.h  options_window.ui  script_editor.h
src/ui/generic/: MegaloSyntaxHighlighter.cpp  MegaloSyntaxHighlighter.h  QXBLGamertagValidator.h
src/ui/main_window/: page_multiplayer_settings_scripted.cpp
src/ui/script_editor/: code_editor_with_line_numbers.h  find_replace_bar.h  find_replace_bar.ui  page_player_rating_params.cpp  page_req_obj_types.cpp  page_script_code.cpp  page_script_stats.cpp
src/ui/widgets/: const_team_index_combobox.h  firefight_skull_list.cpp  firefight_wave.cpp
tools/vscode-megalo/: .vscodeignore  LICENSE.md  README.md  language-configuration.json  package.json
tools/vscode-megalo/snippets/: megalo.code-snippets
tools/vscode-megalo/syntaxes/: megalo.tmLanguage.json
(+16 files in other folders)
